--- a/Route_Optimization.ipynb
+++ b/Route_Optimization.ipynb
@@ -1444,7 +1444,7 @@
         }
       ],
       "source": [
-        "# We take only Fredericton for this experiement, can use other cities or intercities as well but for now let us proceed\n",
+        "# We take only Bangalore for this experiement, can use other cities or intercities as well but for now let us proceed\n",
         "city = 'Bangalore'\n",
         "dtf=dtf[dtf[\"City\"]==city][ [\"City\", \"Street Address\", \"Latitude\", \"Longitude\"]].reset_index(drop=True)\n",
         "dtf=dtf.reset_index().rename(columns={\"index\":\"id\", \"Latitude\":\"y\", \"Longitude\":\"x\"})\n",
